<resources>
    <string name="app_name">MeetForPlayMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="e_mail">Email</string>
    <string name="register">Rejestracja</string>
    <string name="re_type_password">Powtórzy hasło</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="logo">MeetForPlay</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="button_login">Zaloguj się</string>
    <string name="link_register_text">Nie masz konta ? Zarejestruj się</string>
    <string name="link_login_text">Masz już konto? Zaloguj się</string>
    <string name="prompt_repeat_password">Powtórz hasło</string>
    <string name="button_register">Zarejestruj się</string>
    <string name="prompt_eventName">Nazwa eventu</string>
    <string name="prompt_objectName">Nazwa obiektu</string>
    <string name="prompt_minPersonToStart">Minimalna liczba graczy</string>
    <string name="prompt_maxPersonToStart">Maksymalna liczba graczy</string>
    <string name="prompt_opis">Opis wydarzenia</string>
    <string name="open_popup" />
</resources>